Expose proposal metadata API for MMN: /proposals-metadata
