# docs/swagger.yaml
@@ -34,6 +34,27 @@ definitions:
       isp:
         type: string
     type: object
+  v2.Metadata:
+    properties:
+      country:
+        type: string
+      ip_type:
+        type: string
+      isp:
+        type: string
+      price_per_gib:
+        type: integer
+      price_per_hour:
+        type: integer
+      provider_id:
+        type: string
+      service_type:
+        type: string
+      updated_at:
+        type: string
+      whitelist:
+        type: boolean
+    type: object
   v2.Price:
     properties:
       currency:
@@ -57,6 +78,8 @@ definitions:
         type: array
       format:
         type: string
+      id:
+        type: integer
       location:
         $ref: '#/definitions/v2.Location'
       price:
@@ -165,4 +188,22 @@ paths:
               $ref: '#/definitions/v2.Proposal'
             type: array
       summary: List proposals
+  /proposals-metadata:
+    get:
+      consumes:
+      - application/json
+      description: List proposals' metadata
+      parameters:
+      - description: Provider ID
+        in: query
+        name: provider_id
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/v2.Metadata'
+            type: array
+      summary: List proposals' metadata.
 swagger: "2.0"
